force-app/main/default/objects/Account/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <displayFormat>AT-{0000}</displayFormat>
    <label>Account Code</label>
    <type>AutoNumber</type>
</CustomField>