force-app/main/default/objects/Account/fields/First_Trade__c.field-meta.xml
<CustomField>
    <fullName>First_Trade__c</fullName>
    <label>First Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>