force-app/main/default/objects/Account/fields/Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date__c</fullName>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>