force-app/main/default/objects/Account/fields/Leverage__c.field-meta.xml
<CustomField>
    <fullName>Leverage__c</fullName>
    <label>Leverage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>