force-app/main/default/objects/Account/fields/Oanda__c.field-meta.xml
<CustomField>
    <fullName>Oanda__c</fullName>
    <description>API key for Oanda integration</description>
    <label>Oanda API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>