force-app/main/default/objects/Account/fields/Oanda_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Oanda_Account_Id__c</fullName>
    <label>Oanda Account Id</label>
    <length>63</length>
    <type>Text</type>
</CustomField>