force-app/main/default/objects/Account/fields/Oanda_Connection__c.field-meta.xml
<CustomField>
    <fullName>Oanda_Connection__c</fullName>
    <label>Oanda Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>