force-app/main/default/objects/Account/fields/Oanda_Latest_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Oanda_Latest_Ticket_Number__c</fullName>
    <label>Oanda Latest Ticket Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>