force-app/main/default/objects/Account/fields/OandaAccIdRemoved__c.field-meta.xml
<CustomField>
    <fullName>OandaAccIdRemoved__c</fullName>
    <formula>SUBSTITUTE(MID(Oanda_Account_Id__c, 4, LEN(Oanda_Account_Id__c) - 3), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OandaAccIdRemoved</label>
    <type>Text</type>
</CustomField>