force-app/main/default/objects/Account/fields/Second_SS__c.field-meta.xml
<CustomField>
    <fullName>Second_SS__c</fullName>
    <label>Second SS</label>
    <type>Url</type>
</CustomField>