force-app/main/default/objects/Account/fields/Second_Trade__c.field-meta.xml
<CustomField>
    <fullName>Second_Trade__c</fullName>
    <label>Second Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>