force-app/main/default/objects/Account/fields/Signalling_Account__c.field-meta.xml
<CustomField>
    <fullName>Signalling_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account lookup that is following signals from</description>
    <label>Signalling Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Signalee Accounts</relationshipLabel>
    <relationshipName>Signalee_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>