force-app/main/default/objects/Account/fields/Third_Trade__c.field-meta.xml
<CustomField>
    <fullName>Third_Trade__c</fullName>
    <label>Third Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>