force-app/main/default/objects/Account/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Trading Accounts</relationshipLabel>
    <relationshipName>Trading_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>