force-app/main/default/objects/Account/recordTypes/eToro.recordType-meta.xml
<RecordType>
    <fullName>eToro</fullName>
    <active>true</active>
    <description>eToro</description>
    <label>eToro</label>
</RecordType>