force-app/main/default/objects/Account/recordTypes/MetaTrader5.recordType-meta.xml
<RecordType>
    <fullName>MetaTrader5</fullName>
    <active>true</active>
    <label>MetaTrader5</label>
</RecordType>