force-app/main/default/objects/Account/recordTypes/Oanda_Live.recordType-meta.xml
<RecordType>
    <fullName>Oanda_Live</fullName>
    <active>true</active>
    <description>Account for oanda live trading accounts</description>
    <label>Oanda Live</label>
</RecordType>