force-app/main/default/objects/Account/recordTypes/Oanda_Practise.recordType-meta.xml
<RecordType>
    <fullName>Oanda_Practise</fullName>
    <active>true</active>
    <description>Record type for Oanda practise accounts</description>
    <label>Oanda Practise</label>
</RecordType>