force-app/main/default/objects/Account/recordTypes/Oanda_Signalee.recordType-meta.xml
<RecordType>
    <fullName>Oanda_Signalee</fullName>
    <active>true</active>
    <description>Account to follow a live Oanda account and copy signal trades</description>
    <label>Oanda Signalee</label>
</RecordType>